# gdtools

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/config/: mod.rs  types.rs
src/format/: ast_check.rs  comments.rs  context.rs  mod.rs  options.rs  output.rs  reorder.rs  skip_regions.rs
src/format/nodes/: control_flow.rs  declarations.rs  expressions.rs  mod.rs  statements.rs
src/lint/: context.rs  diagnostic.rs  mod.rs  rule.rs  runner.rs  suppression.rs
src/parser/: mod.rs
src/rules/: basic.rs  design.rs  format.rs  mod.rs  naming.rs  style.rs
tests/: format_test.rs  reorder_test.rs  rules_test.rs
tests/fixtures/: gdlint.toml  suppression_test.gd  test.gd
tests/fixtures/format/: fullfile.gd  malformed.gd  test_basic.gd
