[package]
name = "gdlint"
version = "0.1.0"
edition = "2021"
description = "A fast GDScript linter for Godot 4.x"
license = "MIT"
default-run = "gdlint"

[dependencies]
# Parsing
tree-sitter = "0.24"
tree-sitter-gdscript = "6.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Parallelism & File Walking
rayon = "1.10"
ignore = "0.4"

# Output
serde_json = "1.0"

# Error Handling
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

# Utilities
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.42"
tempfile = "3.15"

